layout issue fixed scroll button added

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -39,6 +39,63 @@ h2 {
     margin-bottom: 24px;
 }
 
+/* mouse scroll */
+
+.pointer {
+    position: absolute;
+    left: 48%;
+    top: 70%;
+    display: inline-block;
+    line-height: 18px;
+    font-size: 13px;
+    font-weight: normal;
+    color: #ffffff;
+    letter-spacing: 2px;
+    text-decoration: none;
+    overflow: hidden;
+}
+
+.pointer .icon-scroll {
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 70px;
+    margin: 0 auto 20px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 3px solid #ffffff;
+    border-radius: 23px;
+}
+
+.pointer .icon-scroll .movement {
+    position: absolute;
+    display: block;
+    top: 29%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    margin: -4px 0 0 -4px;
+    background: #ffffff;
+    border-radius: 50%;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: scroll;
+    animation-name: scroll;
+}
+
+@keyframes scroll {
+    0% {
+    opacity: 1;
+    }
+    100% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+    }
+}
+
 /* Navbar */
 
 .navbar-dark .navbar-toggler-icon {
@@ -206,7 +263,6 @@ span {
 }
 
 .contacticon {
-    width: 60%;
     margin: 0 auto;  
 }
 
@@ -315,6 +371,15 @@ MEDIA QUERY
 
 }
 
+/* TOP Landing section mouse scroll only for desktop */
+@media only screen and (max-width: 767px) {
+    
+    .hidden-xs {
+        display: none!important;
+    }
+    
+}
+
 @media only screen and (min-width: 640px) {
     
     /* CONTACT secion */
@@ -344,3 +409,4 @@ MEDIA QUERY
 
 }
 
+            
